# golf

./: .gitignore  FINDINGS.md  LICENSE  README.md  all_game_results.csv  environment.yaml  golf.py  notebook.ipynb  pyproject.toml  q_table.json  setup.py  simulation.py  test_vectorized_comparison.py
.github/workflows/: check_capacity.yml  cleanup_instances.yml  deploy_lambdalabs.yml  upload_model.yml  (+1 more)
configs/: README_TRAINING_PIPELINE.md  experiment_quick.json
data/: all_game_results.csv  dqn_behavioral_metrics.json  heuristic_behavioral_metrics.json  llm_benchmarks.md  q_table.json  seat_cycling_exp11_vs_exp14.txt  seat_cycling_exp11_vs_exp14_gen350.txt  seat_cycling_exp14_gen96_vs_gen350.txt  seat_cycling_exp14_vs_exp15.txt  seat_cycling_exp14_vs_lookahead.txt  seat_cycling_gen350_vs_distilled.txt
deploy/: lambda_orchestrator.py
docs/: beyond-heuristic-rl.md  experiments.md
golf.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: notebook.ipynb
scripts/: __init__.py  agent_comparison.py  analyze_bayes.py  distill_from_bayes.py  eval_compare.py  eval_dqn_stacked.py  eval_heuristics.py  eval_hof.py  eval_vs_random.py  evaluate_offline_agent.py  log_stage0.py  measure_played_deck_entropy.py  plot_belief_evolution.py  plot_offline_training.py  plot_seat_cycling.py  plot_training_progress.py  policy_audit.py  run_training_pipeline.sh  seat_cycling.py  sim_all_heuristic.py  sim_direct.py  sim_via_api.py  simulation_copy.py
src/: analyze_embeddings.py  analyze_experiments.py  bayes_optimal.py  diagnostics.py  dqfd.py  dqn_offline.py  evaluate_agents.py  evaluate_self_play.py  experiment_runner.py  llm_player.py  offline_agent.py  optuna_search.py  qtransformer.py  residual_dqn.py  reward_shaping.py  simulation.py  simulation2.py  simulation_refactor.py  tensor_dataset.py  tensor_logger.py  test.py  tournament.py  vectorized_golf.py
tests/: test_api.py  test_bayes_optimal.py  test_belief_tracker.py  test_concurrency.py  test_game_api.py  test_simulation.py  test_tensor_dataset.py
(+34 files in other folders)
