[project]
name = "golf"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "torch",
    "huggingface_hub",
    "wandb",
    "optuna",
    "matplotlib>=3.10.8",
    "wandb-workspaces>=0.3.7",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
